# ikuai_local_api

./: .gitignore  README.md  __init__.py  cli_test.py  duckdns.py  excute.py  ikuai.py  pyproject.toml  setup.py
ikuai_local_api/: ikuai.py
src/ikuai_api/: __init__.py  cli.py  ikuai.py
src/ikuai_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
